[project]
name = "minimal-tox-project"
version = "0.0.1"

dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
]

[project.optional-dependencies]
dev = ["tox"]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
